--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.6"
 
 services:
   toolkit:
-    image: node:8.11.3-alpine
+    image: node:10.9.0
     working_dir: /project
     volumes:
       - .:/project
