--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "css-loader": "^2.1.1",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "mini-css-extract-plugin": "^0.11.0",
     "monkberry": "^4.0.8",
     "monkberry-loader": "^4.0.8",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.19.1",
-    "webpack": "^3.12.0"
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "monkberry-events": "^4.0.8"
